# Zephyr_AT_Client

./: CMakeLists.txt  README.md  prj.conf
boards/: f303re.overlay
boards/arm/f303re/: Kconfig.board  Kconfig.defconfig  f303re.dts  f303re.yaml
components/at_client/: at.h  at_adapter.c  at_adapter.h  at_client.c  at_def.h  at_utils.c
drivers/: zigbee_common.h  zigbee_drv.h  zigbee_io_drv.c  zigbee_uart_drv.c
dts/bindings/: ebyte,e180-zg120b.yaml
interface/: com_interface.c  com_interface.h
src/: main.c
